samples/_failures_safe/1761595336_902ea2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8446431.c: In function ‘calculate_bounds’:
./samples/SAFE/__tmp_e8446431.c:134:5: error: expected expression at end of input
  134 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_e8446431.c:134:5: error: expected declaration or statement at end of input
